---------------------------------------------------------------------------------------------------
Version: 1.4.6
Date: 5 April 2021
  Changes:
    - 'Call last used spidertron' shortcut now becomes unavailable when there is no last used spidertron to call
  Bugfixes:
    - Fixed spidertron remotes not being reconnected after toggling a spidertron if their inventory position had changed
---------------------------------------------------------------------------------------------------
Version: 1.4.5
Date: 29 March 2021
  Compatibility:
    - Companion drones no longer generate corpses upon death
  Bugfixes:
    - Fixed items with data (such as equipment grids) losing their data when stored in spidertron corpses
    - Fixed modded spidertron fuel (e.g. Krastorio2 or Tarantulator) not being stored in spidertron corpses
---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 29 March 2021
  Bugfixes:
    - Fixed crash when spidertron dies
    - Fixed modded spidertron fuel (e.g. Krastorio2 or Tarantulator) being lost when the spidertron enters a vehicle or the player
---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 26 March 2021
  Bugfixes:
    - Fixed 'Call last used spidertron' shortcut not being toggled off when a remote is used to order the spidertron
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 25 March 2021
  Changes:
    - Changed 'Call last used spidertron' shortcut icon from crosshair to whistle
    - Changed 'Call last used spidertron' default keybind from 'Alt + F' to 'Alt + C'
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 24 March 2021
  Bugfixes:
    - Fixed crash after pressing 'U'