@@ -24,6 +24,7 @@ spidertron-enhancements-enable-corpse=Save spidertron inventory into corpse upon
 
 spidertron-enhancements-enter-entity-base-game=Enter/exit vehicles from spidertron with standard control __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__ [img=info]
 spidertron-enhancements-enter-entity-custom=Enter/exit vehicles from spidertron with custom control __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__ [img=info]
+spidertron-enhancements-pipette-unconnected-remote=Spidertron pipette tool picks an unconnected remote if no connected remotes are found
 
 [mod-setting-description]
 spidertron-enhancements-enter-entity=Configure controls in [font=default-bold]Per player[/font] settings tab.
@@ -40,7 +41,8 @@ spidertron-enhancements-spidertron-remote-append=__1__\n[font=default-semibold][
 
 
 [cursor-message]
-spidertron-enhancements-remote-not-found=Connected remote not found
+spidertron-enhancements-remote-not-found=No remote found
+spidertron-enhancements-connected-remote-not-found=No connected remote found
 spidertron-enhancements-entity-not-spidertron=Entity is not a spidertron
 spidertron-enhancements-no-last-spidertron=Last used spidertron not found
 
